--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,18 +36,18 @@
                 </div>
             </div>
             
-            <!-- Right Panel: Restaurant List and Roulette -->
+            <!-- Right Panel: Roulette and Restaurant List -->
             <div class="right-panel">
-                <div class="restaurants-section">
-                    <h2>Restaurants</h2>
-                    <ul id="restaurantsList"></ul>
-                </div>
-                
                 <div class="roulette-section">
                     <div id="rouletteContainer" class="roulette-container">
                         <canvas id="rouletteCanvas" width="300" height="300"></canvas>
                         <div id="roulettePointer" class="roulette-pointer"></div>
                     </div>
+                </div>
+                
+                <div class="restaurants-section">
+                    <h2>Restaurants</h2>
+                    <ul id="restaurantsList"></ul>
                 </div>
             </div>
         </div>
