--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
                 </div>
                 
                 <div class="restaurants-section">
-                    <h2>Restaurants</h2>
+                    <h2>Category Stats</h2>
                     <ul id="restaurantsList"></ul>
                 </div>
             </div>
