--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Lunch Roulette</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="index-page">
     <div class="container">
         <div class="header-row">
             <h1 class="title"><a href="/" class="home-link">Lunch Roulette</a></h1>
