--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -6,7 +6,7 @@
     <title>Restaurant List - Lunch Roulette</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="admin-page">
     <div class="container">
         <div class="header-row">
             <h1 class="title">Restaurant List</h1>
